Global-K8s-Configs/K8s-configs/squid-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squid-proxy
  namespace: fampay-dev
spec:
  replicas: 1
  selector:
    matchLabels: { app: squid-proxy }
  template:
    metadata:
      labels: { app: squid-proxy }
    spec:
      containers:
      - name: squid
        image: sameersbn/squid:3.5.27-2
        volumeMounts:
        - name: squid-conf
          mountPath: /etc/squid/squid.conf
          subPath: squid.conf
        ports:
        - containerPort: 3128
      volumes:
      - name: squid-conf
        configMap:
          name: squid-proxy-conf
