Global-K8s-Configs/K8s-configs/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: fampay-dev
spec:
  type: NodePort
  selector:
    app: nginx-proxy
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
