Global-K8s-Configs/K8s-configs/squid-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: squid-proxy
  namespace: fampay-dev
spec:
  selector: { app: squid-proxy }
  ports:
  - port: 3128
    targetPort: 3128
    protocol: TCP
