Global-K8s-Configs/K8s-configs/network-policy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-rule-policy
  namespace: fampay-dev
spec:
  podSelector:
    matchLabels:
      app: hodr  
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: squid-proxy
    ports:
    - protocol: TCP
      port: 3128
