Global-K8s-Configs/K8s-configs/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-rule-policy
  namespace: fampay-dev
spec:
  podSelector: {}   
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels: { app: squid-proxy }
    ports:
    - port: 3128
      protocol: TCP
